--- a/feature/movie_details/src/main/res/layout/layout_movie_info.xml
+++ b/feature/movie_details/src/main/res/layout/layout_movie_info.xml
@@ -85,6 +85,18 @@
             app:value="@{movie.originalLanguage}" />
 
         <com.indisparte.ui.custom_view.LinearLayoutInfoView
+            android:id="@+id/productionCompanies"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:orientation="horizontal"
+            app:hideIfValueEmpty="true"
+            app:textColor="@color/geyser"
+            app:textSize="14sp"
+            app:title="Companies"
+            app:value="@{movie.productCompaniesConcatenatedString}" />
+
+        <com.indisparte.ui.custom_view.LinearLayoutInfoView
             android:id="@+id/budget"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
