--- a/feature/movie_details/src/main/res/layout/layout_movie_info.xml
+++ b/feature/movie_details/src/main/res/layout/layout_movie_info.xml
@@ -20,8 +20,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
-            android:text="Info"
-            style="@style/HugeTitleTextViewStyle"/>
+            android:text="Information"
+            style="@style/SmallTitleTextViewStyle"/>
 
 
         <com.indisparte.ui.custom_view.LinearLayoutInfoView
