--- a/feature/movie_details/src/main/res/layout/list_item_crew.xml
+++ b/feature/movie_details/src/main/res/layout/list_item_crew.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -9,25 +10,26 @@
             type="com.indisparte.model.entity.Crew" />
     </data>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="10dp">
 
-        <TextView
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@{crew.name}"
-            android:textColor="?attr/colorOnPrimary"
-            tools:text="@tools:sample/full_names" />
+            android:layout_marginBottom="10dp"
+            android:orientation="vertical">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@{crew.job}"
-            android:textColor="?attr/colorOnSecondary"
-            tools:text="@tools:sample/full_names" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@{crew.name}"
+                android:textColor="?attr/colorOnPrimary"
+                tools:text="@tools:sample/full_names" />
 
-    </LinearLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@{crew.job}"
+                android:textColor="?attr/colorOnSecondary"
+                tools:text="@tools:sample/full_names" />
+
+        </LinearLayout>
 </layout>
