feat: Added functionality to retrieve release dates and related classes

--- a/core/ui/src/main/res/layout/list_item_media_small.xml
+++ b/core/ui/src/main/res/layout/list_item_media_small.xml
@@ -18,8 +18,8 @@
         app:pv_chipValue="@{media.voteAverageRounded}"
         app:pv_imageUrl="@{media.completePosterPathW780}"
         app:pv_posterHeight="170dp"
+        app:pv_title_style="@style/BodyTextViewStyle"
         app:pv_posterWidth="120dp"
-        app:pv_title="@{media.mediaName}"
-        app:pv_title_size="14sp" />
+        app:pv_title="@{media.mediaName}" />
 
 </layout>
