--- a/feature/home/src/main/res/menu/home_menu.xml
+++ b/feature/home/src/main/res/menu/home_menu.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/search"
-        android:iconTint="?attr/colorOnSecondary"
+        android:iconTint="?attr/colorOnPrimary"
         android:icon="@drawable/ic_outline_search_24"
         app:showAsAction="ifRoom"
         android:title="@string/menu_search_text" />
