--- a/feature/movie_details/src/main/res/layout/layout_movie_info.xml
+++ b/feature/movie_details/src/main/res/layout/layout_movie_info.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -16,22 +16,41 @@
 
         <TextView
             android:id="@+id/textTitleInfo"
+            style="@style/SmallTitleTextViewStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
-            android:text="Information"
-            style="@style/SmallTitleTextViewStyle"/>
+            android:layout_marginTop="@dimen/base_margin"
+            android:layout_marginBottom="@dimen/base_margin"
+            android:text="Information" />
 
+
+        <TextView
+            android:id="@+id/release_information_title"
+            android:layout_width="match_parent"
+            android:textSize="14sp"
+            android:textStyle="bold"
+            android:layout_height="wrap_content"
+            android:text="Release information"
+            android:textColor="?attr/colorOnSecondary" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/release_information_recyclerview"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/base_margin"
+            tools:listitem="@layout/list_item_release_info"
+            android:orientation="horizontal"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 
         <com.indisparte.ui.custom_view.LinearLayoutInfoView
             android:id="@+id/originalTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
+            android:layout_marginBottom="@dimen/base_margin"
+            android:layout_marginTop="@dimen/base_margin"
             android:orientation="horizontal"
             app:hideIfValueEmpty="true"
-            app:textColor="@color/geyser"
+            app:textColor="?attr/colorOnSecondary"
             app:textSize="14sp"
             app:title="Original title"
             app:value="@{movie.originalTitle}" />
@@ -40,10 +59,10 @@
             android:id="@+id/tagline"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
+            android:layout_marginBottom="@dimen/base_margin"
             android:orientation="horizontal"
             app:hideIfValueEmpty="true"
-            app:textColor="@color/geyser"
+            app:textColor="?attr/colorOnSecondary"
             app:textSize="14sp"
             app:title="Tagline"
             app:value="@{movie.tagline}" />
@@ -52,10 +71,10 @@
             android:id="@+id/status"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
+            android:layout_marginBottom="@dimen/base_margin"
             android:orientation="horizontal"
             app:hideIfValueEmpty="true"
-            app:textColor="@color/geyser"
+            app:textColor="?attr/colorOnSecondary"
             app:textSize="14sp"
             app:title="Status"
             app:value="@{movie.status}" />
@@ -64,10 +83,10 @@
             android:id="@+id/runtime"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
+            android:layout_marginBottom="@dimen/base_margin"
             android:orientation="horizontal"
             app:hideIfValueEmpty="true"
-            app:textColor="@color/geyser"
+            app:textColor="?attr/colorOnSecondary"
             app:textSize="14sp"
             app:title="Runtime"
             app:value="@{movie.formattedRuntime}" />
@@ -76,10 +95,10 @@
             android:id="@+id/originalLanguage"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
+            android:layout_marginBottom="@dimen/base_margin"
             android:orientation="horizontal"
             app:hideIfValueEmpty="true"
-            app:textColor="@color/geyser"
+            app:textColor="?attr/colorOnSecondary"
             app:textSize="14sp"
             app:title="Original language"
             app:value="@{movie.originalLanguage}" />
@@ -88,10 +107,10 @@
             android:id="@+id/productionCompanies"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
+            android:layout_marginBottom="@dimen/base_margin"
             android:orientation="horizontal"
             app:hideIfValueEmpty="true"
-            app:textColor="@color/geyser"
+            app:textColor="?attr/colorOnSecondary"
             app:textSize="14sp"
             app:title="Companies"
             app:value="@{movie.productCompaniesConcatenatedString}" />
@@ -100,10 +119,10 @@
             android:id="@+id/budget"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
+            android:layout_marginBottom="@dimen/base_margin"
             android:orientation="horizontal"
             app:hideIfValueEmpty="true"
-            app:textColor="@color/geyser"
+            app:textColor="?attr/colorOnSecondary"
             app:textSize="14sp"
             app:title="Budget"
             app:value="@{movie.formattedBudget}" />
@@ -114,7 +133,7 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             app:hideIfValueEmpty="true"
-            app:textColor="@color/geyser"
+            app:textColor="?attr/colorOnSecondary"
             app:textSize="14sp"
             app:title="Revenue"
             app:value="@{movie.formattedRevenue}" />
