feat: Improvements to the PosterView component
Added the ability to set an empty state icon and style for the title and subtitle from the view itself.

--- a/core/ui/src/main/res/layout/view_empty_state.xml
+++ b/core/ui/src/main/res/layout/view_empty_state.xml
@@ -17,8 +17,7 @@
             android:id="@+id/ivEmptyStateImage"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:elevation="4dp"
-            android:src="@drawable/baseline_blind_24"
+            tools:src="@drawable/baseline_blind_24"
             app:tint="?attr/colorOnSecondary" />
 
         <TextView
