--- a/feature/movie_details/src/main/res/layout/list_item_yt_video.xml
+++ b/feature/movie_details/src/main/res/layout/list_item_yt_video.xml
@@ -14,7 +14,7 @@
         android:id="@+id/video_thumbnail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="10dp"
+        android:layout_marginEnd="@dimen/base_margin"
         app:pv_chipValue="@{video.type}"
         app:pv_posterHeight="120dp"
         app:pv_posterWidth="220dp"
