--- a/feature/movie_details/src/main/res/layout/fragment_media_details.xml
+++ b/feature/movie_details/src/main/res/layout/fragment_media_details.xml
@@ -28,8 +28,8 @@
                 android:layout_height="360dp"
                 android:textSize="18sp"
                 app:collapsedTitleTextColor="?attr/colorOnPrimary"
-                app:contentScrim="?attr/colorSecondary"
-                app:expandedTitleMarginStart="10dp"
+                app:contentScrim="?attr/colorPrimary"
+                app:expandedTitleMarginStart="@dimen/base_margin"
                 app:expandedTitleTextColor="@android:color/transparent"
                 app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
                 app:titleCollapseMode="fade">
@@ -37,7 +37,7 @@
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="?attr/colorSecondary">
+                    android:background="?attr/colorPrimary">
 
                     <ImageView
                         android:id="@+id/media_backdrop"
@@ -54,8 +54,8 @@
                         android:id="@+id/media_poster"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="20dp"
-                        android:layout_marginTop="120dp"
+                        android:layout_marginStart="@dimen/base_margin"
+                        android:layout_marginTop="100dp"
                         android:scaleType="centerCrop"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
@@ -68,28 +68,52 @@
                         style="@style/HugeTitleTextViewStyle"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginHorizontal="20dp"
+                        android:layout_marginHorizontal="@dimen/base_margin"
                         android:ellipsize="end"
                         android:maxLines="2"
                         android:text="@{media.title}"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toEndOf="@+id/media_poster"
-                        app:layout_constraintTop_toBottomOf="@+id/media_backdrop"
+                        app:layout_constraintStart_toEndOf="@id/media_poster"
+                        app:layout_constraintTop_toBottomOf="@id/media_backdrop"
                         tools:text="Media title" />
 
-                    <TextView
-                        android:id="@+id/media_release_date"
-                        style="@style/BodyTextViewStyle"
+                    <androidx.appcompat.widget.LinearLayoutCompat
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginHorizontal="20dp"
-                        android:text='@{media.formattedReleaseDate+" - "+media.formattedRuntime }'
-                        android:textColor="?attr/colorOnSecondary"
-                        android:textStyle="bold"
+                        android:orientation="horizontal"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toEndOf="@+id/media_poster"
-                        app:layout_constraintTop_toBottomOf="@+id/media_title"
-                        tools:text="23 May 2023 - 2 h 20 min" />
+                        app:layout_constraintStart_toEndOf="@id/media_poster"
+                        app:layout_constraintTop_toBottomOf="@id/media_title">
+
+                        <com.google.android.material.chip.Chip
+                            android:id="@+id/certification"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="@dimen/base_margin"
+                            android:textSize="12sp"
+                            android:textStyle="bold"
+                            android:visibility="gone"
+                            tools:visibility="visible"
+                            android:textColor="?attr/colorOnSecondary"
+                            android:backgroundTint="?attr/colorSecondary"
+                            app:layout_constraintTop_toBottomOf="@id/media_title"
+                            tools:text="PG-18" />
+
+                        <TextView
+                            android:id="@+id/media_release_date"
+                            style="@style/BodyTextViewStyle"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="@dimen/base_margin"
+                            android:layout_marginEnd="@dimen/base_margin"
+                            android:text='@{media.formattedReleaseDate+" - "+media.formattedRuntime }'
+                            android:textColor="?attr/colorOnSecondary"
+                            android:textStyle="bold"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toEndOf="@id/certification"
+                            app:layout_constraintTop_toBottomOf="@id/media_title"
+                            tools:text="23 May 2023 - 2 h 20 min" />
+                    </androidx.appcompat.widget.LinearLayoutCompat>
 
 
                     <com.google.android.material.chip.Chip
@@ -97,14 +121,12 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_margin="10dp"
-                        android:backgroundTint="@color/lynch_90"
-                        android:clickable="true"
-                        android:padding="10dp"
+                        android:backgroundTint="?attr/colorSecondary"
                         android:text="Watch providers"
-                        android:textColor="@color/alabaster"
+                        android:textColor="?attr/colorOnSecondary"
                         android:textSize="12sp"
                         android:textStyle="bold"
-                        app:layout_constraintBottom_toTopOf="@+id/media_title"
+                        app:layout_constraintBottom_toTopOf="@id/media_title"
                         app:layout_constraintEnd_toEndOf="parent" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
@@ -136,7 +158,7 @@
             android:id="@+id/view_pager"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/mirage_100"
+            android:background="?attr/colorPrimary"
             android:nestedScrollingEnabled="true"
             app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />
 
@@ -145,8 +167,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
-            android:layout_margin="16dp"
-            android:backgroundTint="@color/vermilion_100"
+            android:layout_margin="@dimen/base_margin"
+            android:backgroundTint="?attr/colorAccent"
             android:src="@drawable/round_add_24" />
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
