--- a/feature/movie_details/src/main/res/layout/list_item_release_info.xml
+++ b/feature/movie_details/src/main/res/layout/list_item_release_info.xml
@@ -21,7 +21,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:padding="10dp">
+            android:padding="@dimen/base_margin">
 
             <TextView
                 android:id="@+id/type"
