--- a/core/ui/src/main/res/drawable/tab_indicator.xml
+++ b/core/ui/src/main/res/drawable/tab_indicator.xml
@@ -4,7 +4,7 @@
         <shape android:shape="rectangle">
             <size android:height="4dp"/>
             <corners android:radius="5dp" />
-            <solid android:color="@color/vermilion_100" />
+            <solid android:color="?attr/colorAccent" />
         </shape>
     </item>
 </layer-list>
