--- a/core/ui/src/main/res/values/colors.xml
+++ b/core/ui/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
     <color name="grey">#BDBDBD</color>
     <color name="grey_50_alpha">#E6EEEEEE</color>
     <color name="white">#FFFFFF</color>
+    <color name="transparent">#00000000</color>
 
 
     <!-- Primary color -->
