--- a/core/ui/src/main/res/drawable/round_corner_transparent_bg.xml
+++ b/core/ui/src/main/res/drawable/round_corner_transparent_bg.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <corners android:radius="20dp" />
-    <solid android:color="@color/grey_50_alpha" />
+    <corners android:radius="@dimen/base_corner_radius" />
+    <solid android:color="@color/transparent_black" />
 </shape>
