--- a/core/ui/src/main/res/layout/poster_view.xml
+++ b/core/ui/src/main/res/layout/poster_view.xml
@@ -27,7 +27,10 @@
             android:layout_marginTop="5dp"
             android:layout_marginEnd="5dp"
             android:background="@drawable/round_corner_transparent_bg"
-            android:padding="10dp"
+            android:paddingEnd="@dimen/base_margin"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
+            android:paddingStart="@dimen/base_margin"
             android:textColor="?attr/colorAccent"
             android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
