--- a/core/ui/src/main/res/values/colors.xml
+++ b/core/ui/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
     <color name="grey_50_alpha">#E6EEEEEE</color>
     <color name="white">#FFFFFF</color>
     <color name="transparent">#00000000</color>
+    <color name="transparent_black">#80000000</color>
 
 
     <!-- Primary color -->
