--- a/core/ui/src/main/res/layout/poster_view.xml
+++ b/core/ui/src/main/res/layout/poster_view.xml
@@ -31,7 +31,7 @@
             android:paddingTop="5dp"
             android:paddingBottom="5dp"
             android:paddingStart="@dimen/base_margin"
-            android:textColor="?attr/colorAccent"
+            android:textColor="?attr/colorOnPrimary"
             android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@id/posterImageView"
