--- a/feature/movie_details/src/main/res/layout/list_item_crew.xml
+++ b/feature/movie_details/src/main/res/layout/list_item_crew.xml
@@ -15,6 +15,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/base_margin"
+            android:padding="@dimen/base_margin"
             android:orientation="vertical">
 
             <TextView
